# thats-nats

./: .formatter.exs  .gitignore  Cargo.toml  README.md  docker-compose.yaml  go.work  mix.exs  run.sh  test.sh
services/thats-nats-go/: go.mod  go.sum  main.go
services/thats-nats-rs/: Cargo.toml
services/thats-nats-rs/src/: main.rs
services/thats_nats_ex/: .gitignore  README.md  mix.exs
services/thats_nats_ex/lib/: thats_nats.ex
services/thats_nats_ex/lib/thats_nats/: application.ex  logger_pull_subscriber.ex  service.ex
services/thats_nats_ex/test/: thats_nats_test.exs
